force-app/main/default/objects/Seat_Allocation__c/Seat_Allocation__c.object-meta.xml
<CustomObject>
    <label>Seat Allocation</label>
    <nameField>
        <label>Seat Allocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seat Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>