force-app/main/default/objects/Seat_Allocation__c/fields/Available_Seat__c.field-meta.xml
<CustomField>
    <fullName>Available_Seat__c</fullName>
    <formula>Total_Seat__c - Booked_Seat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Seat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>