force-app/main/default/objects/Seat_Allocation__c/fields/Exam__c.field-meta.xml
<CustomField>
    <fullName>Exam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exam</label>
    <referenceTo>Exam__c</referenceTo>
    <relationshipLabel>Seat Allocations</relationshipLabel>
    <relationshipName>Seat_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>