force-app/main/default/objects/Seat_Allocation__c/fields/Total_Seat__c.field-meta.xml
<CustomField>
    <fullName>Total_Seat__c</fullName>
    <label>Total Seat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>